# motion_filter

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: filter_param.toml  kinematics.toml  sdh_calibration.csv  sdh_calibration.txt  sdh_calibration2.csv  sdh_skeleton.bvh  sdh_skeleton_rigid.bvh  skeleton.bvh
data/: README.txt
include/: logger.h  quadraticprogram.h
include/motion_filter/: data_handler.hpp  kalman_filter.hpp  motion_filter.hpp  pre_process.hpp  se3_filter.hpp  skeleton_kinematics.hpp  skeleton_kinematics_base.hpp  skeleton_kinematics_huber.hpp  skeleton_kinematics_kalman.hpp  skeleton_kinematics_lsq.hpp  type_def.hpp
main/: se3_filter_main.cpp  skel_kinect_main.cpp
py36/: calib_gui.py  data_viz.ipynb  format.sh  gui_main.py  meshcat_viz.py  requirements.txt  setup.py  viz_test.ipynb
py36/assets/: lefthand.mtl  righthand.mtl  scale_file.py
py36/motion_filter/: distutils.py  euclideanKF.py  se3ekf.py  se3isekf.py
py36/motion_filters/: __init__.py  gui.py  se3ekf.py  se3isekf.py
py36/test/: Robust Gaussian Filter.ipynb  data_viz.ipynb  filter_study.ipynb  filter_test.ipynb  key_test.py
src/: bvh11.cpp  data_handler.cpp  kalman_filter.cpp  logger.cpp  main.cpp  pre_process.cpp  quadraticprogram.cpp  se3_filter.cpp  skeleton_kinematics.cpp  skeleton_kinematics_base.cpp  skeleton_kinematics_huber.cpp  skeleton_kinematics_kalman.cpp  skeleton_kinematics_lsq.cpp
test/: bvh_read.cpp  calibration.cpp  data_handler_test.cpp  logger_test.cpp  manif_test.cpp  manifold_kinematics_test.cpp  pointer_test.cpp  rbdl_kinematics.cpp  ukf_test.cpp
